--- a/traefik/values.yml
+++ b/traefik/values.yml
@@ -3,6 +3,13 @@ ports:
     nodePort: 30080
   websecure:
     nodePort: 30443
+  postgres:
+    port: 5432
+    expose:
+      default: true
+    exposedPort: 5432
+    protocol: TCP
+    nodePort: 30432
 ingressRoute:
   dashboard:
     enabled: true
@@ -11,3 +18,6 @@ ingressRoute:
     matchRule: Host(`traefik.baas.wke.csie.ncnu.edu.tw`)
     tls:
       secretName: wildcard-baas-tls
+logs:
+  access:
+    enabled: true
